--- a/pagina/acercade.html
+++ b/pagina/acercade.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="estilos/styles.css">
-    <link rel="stylesheet" href="estilos/stylescalificación.css">
-</head>
-<body>
-
-<header>
-    <div class="logo">
-        <img src="logo_tanfresco.png" alt="Logo de tu sitio web" height="200px" width="300px">
-    </div>
-    <h1>Todos los productos en un solo lugar</h1>
-    <nav>
+    <link rel="preconnect" href="https://fonts.bunny.net" />
+    <link
+      href="https://fonts.bunny.net/css?family=poppins:400,500,600,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="estilos/styles.css" />
+    <link rel="stylesheet" href="estilos/stylescalificación.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img
+          src="logo_tanfresco.png"
+          alt="Logo de tu sitio web"
+          height="200px"
+          width="300px"
+        />
+      </div>
+      <h1>Todos los productos en un solo lugar</h1>
+      <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="#">Acerca de</a></li>
-            
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="#">Acerca de</a></li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<section class="mapa">
-    <h1>Mapa del Sitio</h1>
-    <img src="Imagenes/mapa.jpg" height="300px" width="400px">
-</section>
+    <section class="mapa">
+      <h1>Mapa del Sitio</h1>
+      <img src="Imagenes/mapa.jpg" height="300px" width="400px" />
+    </section>
 
-<section class="calificar">
-    <h1>Calificación del Servicio</h1>
-</section>
+    <section class="calificar">
+      <h1>Calificación del Servicio</h1>
+    </section>
 
-<section>
-<div class="star-rating">
-  <input type="radio" id="star5" name="rating" value="5">
-  <label for="star5"></label>
-  <input type="radio" id="star4" name="rating" value="4">
-  <label for="star4"></label>
-  <input type="radio" id="star3" name="rating" value="3">
-  <label for="star3"></label>
-  <input type="radio" id="star2" name="rating" value="2">
-  <label for="star2"></label>
-  <input type="radio" id="star1" name="rating" value="1">
-  <label for="star1"></label>
-</div>
-</section>
+    <section>
+      <div class="star-rating">
+        <input type="radio" id="star5" name="rating" value="5" />
+        <label for="star5"></label>
+        <input type="radio" id="star4" name="rating" value="4" />
+        <label for="star4"></label>
+        <input type="radio" id="star3" name="rating" value="3" />
+        <label for="star3"></label>
+        <input type="radio" id="star2" name="rating" value="2" />
+        <label for="star2"></label>
+        <input type="radio" id="star1" name="rating" value="1" />
+        <label for="star1"></label>
+      </div>
+    </section>
 
+    <div>
+      <h2>Gracias por preferirnos</h2>
+    </div>
 
-<div>
-    <h2>Gracias por preferirnos</h2>
-</div>
-
-
-
-<footer>
-    <div class="redes-sociales">
+    <footer>
+      <div class="redes-sociales">
         <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
         <!-- Agrega más enlaces a redes sociales según sea necesario -->
-    </div>
-    <p>Derechos de autor &copy; 2023 - Empresa Tan Fresco</p>
-</footer>
+      </div>
+      <p>Derechos de autor &copy; 2023 - Empresa Tan Fresco</p>
+    </footer>
 
-
-
-<script src="js/script.js"></script>
-<script src="js/scriptcalificacion.js"></script>
-</body>
+    <script src="js/script.js"></script>
+    <script src="js/scriptcalificacion.js"></script>
+  </body>
 </html>
