Agregada clase center-text, modificada página de productos eliminando sección sobrante

--- a/pagina/productos.html
+++ b/pagina/productos.html
@@ -29,93 +29,64 @@
 
     <!-- Sección de productos -->
 
+    <h1 class="center-text">Carrito de compras</h1>
     <section class="productos">
       <div class="producto">
         <img src="Imagenes/verduras/tomates.jpg" alt="Producto 1" />
         <h3>Tomates</h3>
         <p>Tomates frescos</p>
         <p>Precio: 5000 kg</p>
+        <button class="add-to-cart" data-price="5000">
+          Agregar al carrito
+        </button>
       </div>
       <div class="producto">
         <img src="Imagenes/snacks/almendra.jpg" alt="Producto 2" />
         <h3>Almendra</h3>
         <p>Almendra Seleccionada</p>
         <p>Precio: 6000 lb</p>
+        <button class="add-to-cart" data-price="6000">
+          Agregar al carrito
+        </button>
       </div>
       <div class="producto">
         <img src="Imagenes/frutas/peras.jpg" alt="Producto 1" />
         <h3>Peras</h3>
         <p>Peras Frescas</p>
         <p>Precio: 4000 lb</p>
+        <button class="add-to-cart" data-price="4000">
+          Agregar al carrito
+        </button>
       </div>
       <div class="producto">
         <img src="Imagenes/verduras/zanahorias.jpg" alt="Producto 1" />
         <h3>Zanahorias</h3>
         <p>Zanahorias Frescas</p>
         <p>Precio: 2000 lb</p>
+        <button class="add-to-cart" data-price="2000">
+          Agregar al carrito
+        </button>
       </div>
       <div class="producto">
         <img src="Imagenes/snacks/uva pasa.jpg" alt="Producto 1" />
         <h3>Uvas Pasas</h3>
         <p>Uvas Pasas Seleccionadas</p>
         <p>Precio: 5000 lb</p>
+        <button class="add-to-cart" data-price="5000">
+          Agregar al carrito
+        </button>
       </div>
       <div class="producto">
         <img src="Imagenes/frutas/banano.jpg" alt="Producto 1" />
         <h3>Banano</h3>
         <p>Banano Seleccionado</p>
         <p>Precio: 5000 kg</p>
+        <button class="add-to-cart" data-price="5000">
+          Agregar al carrito
+        </button>
       </div>
       <!-- Agrega más productos según sea necesario -->
     </section>
-
-    <div class="container">
-      <h1>Carrito de Compras</h1>
-      <div id="products">
-        <div class="product">
-          <span>Tomates: </span>
-          <button class="add-to-cart" data-price="5000">
-            Agregar al carrito
-          </button>
-        </div>
-        <div class="product">
-          <span>Almendra: </span>
-          <button class="add-to-cart" data-price="6000">
-            Agregar al carrito
-          </button>
-        </div>
-        <div class="product">
-          <span>Peras: </span>
-          <button class="add-to-cart" data-price="4000">
-            Agregar al carrito
-          </button>
-        </div>
-        <div class="product">
-          <span>Zanahorias: </span>
-          <button class="add-to-cart" data-price="2000">
-            Agregar al carrito
-          </button>
-        </div>
-        <div class="product">
-          <span>Uvas Pasas: </span>
-          <button class="add-to-cart" data-price="5000">
-            Agregar al carrito
-          </button>
-        </div>
-        <div class="product">
-          <span>Banano: </span>
-          <button class="add-to-cart" data-price="5000">
-            Agregar al carrito
-          </button>
-        </div>
-      </div>
-      <div id="cart">
-        <h2>Carrito</h2>
-        <ul id="cart-items"></ul>
-        <p>Total: <span id="cart-total">0</span></p>
-        <button id="checkout-btn">Comprar</button>
-      </div>
-    </div>
 
     <footer>
       <div class="redes-sociales">
