Cambios en redacción y h1

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -28,12 +28,12 @@
     </header>
 
     <div class="seccion">
-      <h1>MISION</h1>
+      <h1>Misión</h1>
       <p>
         En nuestra tienda en linea, creada bajo el concepto de “Ayudar a la
         Gente” y promoviendo el inicio o continuidad de habitos de vida
-        saludable, ofrecimos diversidad de productos FRESCOS de excelente
-        calidad en la puesta de los hogares de las ciudades
+        saludable, ofrecemos diversidad de productos <b>frescos</b> de excelente
+        calidad en la puerta de los hogares de las ciudades.
       </p>
     </div>
 
