--- a/pagina/productos.html
+++ b/pagina/productos.html
@@ -17,7 +17,7 @@
           width="300px"
         />
       </div>
-      <h1>Todos los productos en un solo lugar</h1>
+      <h2>Todos los productos en un solo lugar</h2>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -29,7 +29,7 @@
 
     <!-- Sección de productos -->
 
-    <h1 class="center-text">Carrito de compras</h1>
+    <h1 class="center-text">Nuestros productos</h1>
     <section class="productos">
       <div class="producto">
         <img src="Imagenes/verduras/tomates.jpg" alt="Producto 1" />
