--- a/pagina/registro.html
+++ b/pagina/registro.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="#">Registro</a></li>
-          <li><a href="#">Acerca de</a></li>
+          <li><a href="acercade.html">Acerca de</a></li>
         </ul>
       </nav>
     </header>
