Restaurado el carrito, centrados sus elementos

--- a/pagina/productos.html
+++ b/pagina/productos.html
@@ -87,6 +87,15 @@
       </div>
       <!-- Agrega más productos según sea necesario -->
     </section>
+    <section>
+      <div id="cart">
+        <h2 class="center-text">Carrito</h2>
+        <ul id="cart-items"></ul>
+        <p>Total: <span id="cart-total">0</span></p>
+        <button id="checkout-btn">Comprar</button>
+      </div>
+    </section>
+    <br />
 
     <footer>
       <div class="redes-sociales">
