--- a/pagina/index.html
+++ b/pagina/index.html
@@ -47,19 +47,19 @@
         <button>Comprar</button>
       </div>
       <div class="producto">
-        <img src="Imagenes/snacks/almendra.jpg" alt="Producto 2" />
+        <img src="Imagenes/Snacks/almendra.jpg" alt="Producto 2" />
         <h3>Almendra</h3>
         <p>Almendra Seleccionada</p>
         <button>Comprar</button>
       </div>
       <div class="producto">
-        <img src="Imagenes/frutas/peras.jpg" alt="Producto 1" />
+        <img src="Imagenes/Frutas/peras.jpg" alt="Producto 1" />
         <h3>Peras</h3>
         <p>Peras Frescas</p>
         <button>Comprar</button>
       </div>
       <div class="producto">
-        <img src="Imagenes/verduras/zanahorias.jpg" alt="Producto 1" />
+        <img src="Imagenes/Verduras/zanahorias.jpg" alt="Producto 1" />
         <h3>Zanahorias</h3>
         <p>Zanahorias Frescas</p>
         <button>Comprar</button>
