--- a/pagina/index.html
+++ b/pagina/index.html
@@ -65,13 +65,13 @@
         <button>Comprar</button>
       </div>
       <div class="producto">
-        <img src="Imagenes/snacks/uva pasa.jpg" alt="Producto 1" />
+        <img src="Imagenes/Snacks/uva pasa.jpg" alt="Producto 1" />
         <h3>Uvas Pasas</h3>
         <p>Uvas Pasas Seleccionadas</p>
         <button>Comprar</button>
       </div>
       <div class="producto">
-        <img src="Imagenes/frutas/banano.jpg" alt="Producto 1" />
+        <img src="Imagenes/Frutas/banano.jpg" alt="Producto 1" />
         <h3>Banano</h3>
         <p>Banano Seleccionado</p>
         <button>Comprar</button>
